# PIME_old

./: .readthedocs.yaml  README.rst  __init__.py  pyproject.toml
docs/: requirements.txt
docs/source/: api.rst  conf.py  examples.rst  index.rst  ref.bib  usage.rst
lumache/: __init__.py  function.py
pim/: __init__.py  class_doc.py  example.py  hello__init__.py
pim/abstract_class/: __init__.py
pim/continuous_gaussian/: __init__.py  gaussian_fisher_rao.py  gaussian_frechet.py  gaussian_js.py
pim/divergence/: __init__.py  ab_div.py  alpha_div.py  beta_div.py  fisher_rao.py  kl_div.py  lp.py  renyi_div.py
pim/entropy/: __init__.py  cond_knife.py  discret_entropy.py  entropy_doe.py  knife.py
pim/examples/differential_entropy_estimation/: estimate_entropy.ipynb
pim/examples/mutual_information_estimation/: estimate_mi.ipynb  main.py
pim/misc/: __init__.py  helpers.py  i_projection.py  symetrization.py
pim/mutual_information/: __init__.py  club.py  gaussian_fisher_rao.py  gaussian_frechet.py  infonce.py  l1out.py  linear_mixed_estimator.py  mi_doe.py  mi_knife.py  mine.py  nwj.py  tuba.py  varub.py
pim/utils/: helper.py
pimms/misc/: __init__.py  i_projection.py  symetrization.py
